--- a/agent/docker-compose.yml
+++ b/agent/docker-compose.yml
@@ -17,3 +17,10 @@ services:
     volumes:
       - .:/app
     restart: unless-stopped
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
