--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@privy-io/react-auth": "^2.4.2",
     "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "ethers": "^6.13.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
